--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>shopping card </title>
-    <link rel="stylesheet" href="shoppingCard.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
 
 
 
-<script src="./shoppingCard.js"> </script>
+<script src="./index.js"> </script>
 </body>
 
 </html>
